Fix synopsis overflow

--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -159,6 +159,7 @@
     font-size: 14px;
     position: absolute;
     width: 200px;
+    padding-top: 20px;
     text-align: center;
   }
 }
